crates/vescpkg-sys/tests/ui/call_io_set_mode_without_unsafe.rs
fn main() {
    let _ = vescpkg_sys::raw::io_set_mode(vescpkg_sys::VescPin(0), vescpkg_sys::VescPinMode(0));
}
